[gd_scene load_steps=11 format=3 uid="uid://cvcleljkq6rj3"]

[ext_resource type="Script" uid="uid://cep52t1vaiqbs" path="res://environment/door.gd" id="1_05hnu"]
[ext_resource type="Texture2D" uid="uid://dx6bf17g3qso1" path="res://images/doors/GarageCarDoor.png" id="2_are4n"]
[ext_resource type="Script" uid="uid://cn1u6jvdgx76o" path="res://environment/garage_image.gd" id="3_jehm5"]
[ext_resource type="Texture2D" uid="uid://jqkgnnhhwsv6" path="res://images/doors/wood_doors.png" id="4_mubsm"]
[ext_resource type="Script" uid="uid://dmstkr0snvh7q" path="res://environment/french_door_image.gd" id="5_mubsm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_05hnu"]
size = Vector2(192, 99)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jehm5"]
size = Vector2(115, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_275g2"]
size = Vector2(114, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_are4n"]
size = Vector2(196, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mubsm"]
size = Vector2(288, 106)

[node name="Door" type="Node2D"]
script = ExtResource("1_05hnu")

[node name="GarageImage" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
texture = ExtResource("2_are4n")
offset = Vector2(-48, 0)
region_enabled = true
region_rect = Rect2(96, 0, 96, 192)
script = ExtResource("3_jehm5")

[node name="DoorImage" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
rotation = 1.5708
texture = ExtResource("4_mubsm")
offset = Vector2(0, 48)
script = ExtResource("5_mubsm")

[node name="Area_PlayerAverage" type="Area2D" parent="."]
unique_name_in_owner = true
visible = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape_Player" type="CollisionShape2D" parent="Area_PlayerAverage"]
unique_name_in_owner = true
visible = false
shape = SubResource("RectangleShape2D_05hnu")
debug_color = Color(0.988235, 0.854902, 0.0588235, 0.419608)

[node name="Area2D_close_door_inside" type="Area2D" parent="."]
unique_name_in_owner = true
visible = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D_inside" type="CollisionShape2D" parent="Area2D_close_door_inside"]
unique_name_in_owner = true
visible = false
position = Vector2(-53.5, 0)
shape = SubResource("RectangleShape2D_jehm5")
debug_color = Color(0.0588235, 0.854902, 0.996078, 0.419608)

[node name="Label" type="Label" parent="Area2D_close_door_inside"]
visible = false
offset_right = 40.0
offset_bottom = 23.0
text = "Outside"

[node name="Area2D_close_door_outside" type="Area2D" parent="."]
unique_name_in_owner = true
visible = false
self_modulate = Color(1, 1, 0.898039, 1)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D_outside" type="CollisionShape2D" parent="Area2D_close_door_outside"]
unique_name_in_owner = true
visible = false
position = Vector2(53, 0)
shape = SubResource("RectangleShape2D_275g2")
debug_color = Color(0.447238, 0.861388, 0.697397, 0.419608)

[node name="Label2" type="Label" parent="Area2D_close_door_outside"]
visible = false
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -61.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
text = "Inside"

[node name="Area2D_sleep_helper" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D_Sleep" type="CollisionShape2D" parent="Area2D_sleep_helper"]
unique_name_in_owner = true
visible = false
shape = SubResource("RectangleShape2D_are4n")
debug_color = Color(0.0588235, 0.854902, 0.996078, 0.419608)

[node name="Label" type="Label" parent="Area2D_sleep_helper"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -24.0
offset_top = -42.0
offset_right = 18.0
offset_bottom = -19.0
grow_horizontal = 2
text = "Sleep"

[node name="Area2D_visual_helper" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_visual_helper"]
unique_name_in_owner = true
visible = false
shape = SubResource("RectangleShape2D_mubsm")

[connection signal="body_shape_entered" from="Area2D_close_door_outside" to="." method="_on_area_2d_close_door_outside_body_shape_entered"]
